# ADVANCED_PROGRAMMING

./: .gitignore  Lessons-TimeTable.odt  homework_03_CLINCO.tar.xz
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/: CMakeLists.txt  TutorialConfig.h.in
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/Executable/: CMakeLists.txt  simpleProgramExe.cpp
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/MATHFUNCTIONS/: CMakeLists.txt
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/MATHFUNCTIONS/BaseMathFunctions/: SquareRoot.cpp
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/MATHFUNCTIONS/SecondMathFunctions/: Square.cpp
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/build_files_NO_LIB/: cmake_install.cmake
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/build_files_NO_LIB/Executable/: Makefile  cmake_install.cmake
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial02/build_files_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial03/: CMakeLists.txt  Header.h
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial03/Executable/: CMakeLists.txt  simpleProgramExe.cpp
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial03/MATHFUNCTIONS/: CMakeLists.txt
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial03/build_files_NO_LIB/: CMakeCache.txt  Makefile
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial03/build_files_lib/: CMakeCache.txt  Makefile  TutorialConfig.h  cmake_install.cmake
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial05/: CMakeLists.txt  tutorial.cxx
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial05/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx
CMake_Tutorial_personale/TUTORIAL_MAKE/tutorial05/build_step5/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  Tutorial  cmake_install.cmake
CMake_Tutorial_personale/TUTORIAL_ONLINE/say-hello/: CMakeLists.txt
Exercises/EX_8_CMAKE/: CMakeLists.txt  ex1.cpp  ex1.cpp~
Exercises/EX_PYBIND/ex_2/: CMakeLists.txt  main.py  main.py~  newton_py.cpp  newton_py.cpp~
Exercises/EX_PYBIND/ex_3/: CMakeLists.txt  setup.py  setup.py~
Exercises/EX_PYBIND/ex_3/include/: eigen_op.hpp
Exercises/EX_PYBIND/ex_3/src/: eigen_op.cpp  pythonEig.cpp
homework_01/: main  (+11 more)
homework_02.01/: CMakeLists.txt  CMakeLists.txt~  README.md  setup.py  setup.py~
homework_02.01/Examples/: Output.txt
homework_02.01/Headers/: CSV_WRITER.hpp  DATA_FRAME.hpp  ODE.hpp
homework_02.01/Tests/: NUM_INT_out.5429  configCSV.txt  main_DATA_FRAME  main_NUMERICAL_INTEGRATION  main_ODE  outputEU.txt  outputRK4.txt
homework_02.01/Tests/CALLGRIND/: DATA_FRAME_out.6136  ODE_out.4614
homework_02.01/pyDirLib/: setup.py  setup.py~  testDF.py  testDF.py~  testQuad.py
homework_02.01/pyDirLib/.ipynb_checkpoints/: testDF-checkpoint.py  test_quadrature-checkpoint.ipynb  test_statistics-checkpoint.ipynb
homework_02.01/pyDirLib/quadrature/: quadrature.py  test_quadrature.ipynb
homework_02.01/pyDirLib/quadrature/.ipynb_checkpoints/: test_quadrature-checkpoint.ipynb
homework_02.01/pyDirLib/statistics/: dataframe.py  test_statistics.ipynb
homework_02.01/pyDirLib/statistics/.ipynb_checkpoints/: dataframe-checkpoint.py  test_statistics-checkpoint.ipynb
homework_02.01/src/: CMakeLists.txt  CMakeLists.txt~
homework_02.01/src/ODE_module/: ODE.cpp  ODE.cpp~  ODE.hpp  ODE.hpp~  mainODE.cpp
homework_02.01/src/data_frame_module/: #DATA_FRAME.hpp#  CMakeLists.txt  CMakeLists.txt~  DATA_FRAME.cpp  DATA_FRAME.hpp
homework_02.01/src/example_dataframe/: CMakeLists.txt  main_DATA_FRAME.cpp
homework_02.01/src/example_ode/: CMakeLists.txt~  mainODE.cpp~  main_ODE.cpp
homework_02.01/src/example_quadrature/: CMakeLists.txt  main_NUMERICAL_INTEGRATION.cpp
homework_02.01/src/ode_module/: CMakeLists.txt  CMakeLists.txt~  ODE.cpp  ODE.cpp~  ODE.hpp  ODE.hpp~
homework_02.01/src/pyDir/: CMakeLists.txt  dataFrameBind.cpp
homework_02.01/src/pyDirDF/: CMakeLists.txt  CMakeLists.txt~  CmakeLists_OLD.txt  dataFrameBind.cpp
homework_02.01/src/pyDirQuad/: CMakeLists.txt  CMakeLists_OLD.txt
homework_02.01/src/quad_module/: CMakeLists.txt
homework_02.01/src/test_dataframe/: CMakeLists.txt  CMakeLists.txt~  main_DATA_FRAME.cpp
homework_02.01/src/test_ode/: main_ODE.cpp
homework_02.01/src/test_quadrature/: CMakeLists.txt~
homework_02.01/src/tests/: CMakeLists.txt  test_commands_quadrature.hpp  test_commands_statistics.hpp  test_main.cpp
homework_02.01/tests/: configCSV.txt  test_main
homework_02/data_frame_module/: #DATA_FRAME.cpp#  #DATA_FRAME.hpp#  .#DATA_FRAME.cpp  .#DATA_FRAME.hpp  CMakeLists.txt  CSV_WRITER.hpp  DATA_FRAME.cpp  DATA_FRAME.cpp~  DATA_FRAME.hpp  DATA_FRAME.hpp~  Makefile  _CMAKELISTS.txt_  generateLibdf.sh
homework_03/: CMakeLists.txt  CMakeLists.txt~  setup.py
homework_03/Examples/: main_DATA_FRAME
homework_03/Headers/: ODE.hpp  interpolation.hpp  interpolation.hpp~
homework_03/apps/: CMakeLists.txt  CMakeLists.txt~  input.txt  main
homework_03/convertToPy/: CMakeLists.txt  CMakeLists.txt~  dataFrameBind.cpp  dataFrameBind.cpp~
homework_03/data_frame/: CMakeLists.txt  dataFrameBind.cpp~  data_frame.cpp  data_frame.hpp  mainDF.cpp
homework_03/pyDirLib/: __init__.py
homework_03/pyDirLib/odeint/: pyOdeTest.ipynb
homework_03/pyDirLib/quadrature/: __init__.py  quadrature.py  test_quadrature.ipynb
homework_03/pyDirLib/statistics/: __init__.py  __init__.py~  dataframe.py  test_statistics.ipynb
homework_03/src/: CMakeLists.txt~
homework_03/src/example_interpolation/: CMakeLists.txt~  main_INTERP.cpp
homework_03/src/example_ode/: main_ODE.cpp~
homework_03/src/example_quadrature/: CMakeLists.txt~
homework_03/src/interp_module/: interpolation.cpp  interpolation.cpp~
homework_03/src/pyDirDF/: dataFrameBind.cpp
homework_03/src/pyDirODE/: CMakeLists.txt~  odeBind.cpp  odeBind.cpp~
homework_03/src/pyDirQuad/: quadBind.cpp
homework_03/src/quad_module/: CMakeLists.txt~
homework_03/src/tests/: test_commands_quadrature.hpp  test_commands_statistics.hpp  test_main.cpp
homework_03/tests/: .~lock.London_weather.csv#
(+203 files in other folders)
